k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grilotv
  labels:
    app.kubernetes.io/name: grilotv
