k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grilotv
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grilotv.online
        - www.grilotv.online
      secretName: grilotv-online-tls
  rules:
    - host: grilotv.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grilotv-app
                port:
                  number: 80
    - host: www.grilotv.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grilotv-app
                port:
                  number: 80
